# sdlc

./: .gitignore  AGENTS.md  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
agents/skills/commit/: SKILL.md
agents/skills/implement/: SKILL.md
agents/skills/issue/: SKILL.md
agents/skills/pr/: SKILL.md
agents/skills/review/: SKILL.md
agents/skills/test/: SKILL.md
agents/style-guides/: markdown.md
agents/test-guides/: python.md
scripts/: install.sh  uninstall.sh
src/sdlc/: AGENTS.md  __init__.py  __main__.py  config.json  guides.py  pr_state.py  review-template.md  role-template.md  server.py
src/sdlc/role-guides/: aie.md  general-purpose.md
src/sdlc/skills/: commit.md  implement-continue.md  implement-feedback.md  implement.md  issue.md  pr.md  review.md  role.md  test.md
src/sdlc/test-guides/: python.md
tests/: test_guides.py  test_pr_state.py  test_server.py
